Hice el cuadro mas largo y lo puse solid

--- a/Layouts/Main.xml
+++ b/Layouts/Main.xml
@@ -36,13 +36,20 @@
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
                     </properties>
+                    <behavior-instances>
+                        <behavior-instance type="Solid">
+                            <properties>
+                                <initial-state>Enabled</initial-state>
+                            </properties>
+                        </behavior-instance>
+                    </behavior-instances>
                     <blend-mode>0</blend-mode>
                     <effect-fallback>0</effect-fallback>
                     <world>
-                        <x>583</x>
-                        <y>266</y>
+                        <x>647</x>
+                        <y>769</y>
                         <z>0</z>
-                        <width>250</width>
+                        <width>1665</width>
                         <height>250</height>
                         <depth>0</depth>
                         <hotspotX>0.5</hotspotX>
