Se crearon los eventos de sistema

--- a/Alpha01/Layouts/NeekAlpha01.xml
+++ b/Alpha01/Layouts/NeekAlpha01.xml
@@ -138,7 +138,7 @@
             <instances>
                 <instance type="Sprite5" uid="5">
                     <properties>
-                        <initial-visibility>Visible</initial-visibility>
+                        <initial-visibility>Invisible</initial-visibility>
                         <initial-animation>Default</initial-animation>
                         <initial-frame>0</initial-frame>
                         <collisions>Enabled</collisions>
